# firmware

./: Makefile.am  configure.ac  flow.c  server.c
common/: common.c  common.h
hal/: properties.c  properties.h  property_manager.c
